# myshell

./: CMakeLists.txt  README.md  main.cpp  sh_main.cpp  sh_tools.cpp  sh_tools.h
Progs/: mcpp  mls  mrv
mmkdir/: CMakeLists.txt  main.cpp  mmkdir
myCP/: CMakeLists.txt  main.cpp
myLS/: CMakeLists.txt  main.cpp  mls
myMV/: CMakeLists.txt  main.cpp
myRM/: CMakeLists.txt  main.cpp  mrm
myRV/: CMakeLists.txt  main.cpp  mrv
mymkdir/: CMakeLists.txt
